test/expr/bad-convert-empty.txt
;;; ERROR: 1
(module (func (f32.convert_s/i32)))
(;; STDERR ;;;
expr/bad-convert-empty.txt:2:33: syntax error, unexpected ), expecting (
;;; STDERR ;;)
